<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".views.DetailsFragment">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/relative"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/character_thumbnail_imageview"
                android:layout_width="190dp"
                android:layout_height="190dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="20dp"
                android:contentDescription="@string/character_thumbnail"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/character_name_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:padding="8dp"
                android:paddingEnd="5dp"
                android:text="@string/character_name"
                android:textColor="@color/text_color"
                android:textSize="25sp"
                android:textStyle="bold"
                app:layout_constrainedWidth="true"
                app:layout_constraintStart_toEndOf="@id/character_thumbnail_imageview"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/character_description_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:paddingEnd="5dp"
                android:text="@string/character_description"
                android:textColor="@color/text_color"
                android:textSize="15sp"
                app:layout_constrainedWidth="true"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@id/character_thumbnail_imageview"
                app:layout_constraintTop_toBottomOf="@id/character_name_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.core.widget.NestedScrollView>
