<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.CharactersListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/header_constraint"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:ignore="MissingConstraints">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints">

            <TextView
                android:id="@+id/character_list_title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:ellipsize="end"
                android:maxLines="2"
                android:text="@string/character_catalog"
                android:textColor="@color/text_color"
                android:textSize="20sp"
                android:textStyle="bold"
                tools:layout_editor_absoluteX="30dp" />

            <TextView
                android:id="@+id/search_textview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="30dp"
                android:layout_marginTop="2dp"
                android:text="@string/search_for_a_specific_character"
                android:textColor="@color/text_color"
                android:textSize="18sp"
                app:layout_constraintTop_toBottomOf="@id/character_list_title" />

            <androidx.appcompat.widget.SearchView
                android:id="@+id/character_searchview"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_color"
                android:focusedByDefault="true"
                android:imeOptions="actionSearch"
                android:inputType="textCapCharacters"
                android:textColor="@color/text_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/search_textview" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/characters_list_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        android:text="@string/character_list"
        android:textColor="@color/text_color"
        android:textSize="17sp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/header_constraint"
        tools:ignore="MissingConstraints" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/characters_list_recyclerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="30dp"
        android:layout_marginTop="20dp"
        app:layout_constraintTop_toBottomOf="@+id/characters_list_textview"
        tools:ignore="MissingConstraints" />

    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
